# atdd

./: .gitignore  CLAUDE.md  README.md  URN-SPEC-V3.md  pyproject.toml
.atdd/: config.yaml  manifest.yaml
.github/workflows/: atdd-validate.yml  publish.yml
atdd/: README.md  atdd.py
atdd/coach/commands/: add_persistence_metadata.py  infer_governance_status.py  migration.py  registry.py  traceability.py
atdd/coach/validators/: shared_fixtures.py  test_session_validation.py
atdd/coder/validators/: test_commons_structure.py  test_complexity.py  test_cross_language_consistency.py  test_design_system_compliance.py  test_dto_testing_patterns.py  test_green_cross_stack_layers.py  test_green_layer_dependencies.py  test_green_python_layer_structure.py  test_green_supabase_layer_structure.py  test_import_boundaries.py  test_init_file_urns.py  test_preact_layer_boundaries.py  test_presentation_convention.py  test_python_architecture.py  test_quality_metrics.py  test_train_infrastructure.py  test_train_urns.py  test_typescript_architecture.py  test_usecase_structure.py  test_wagon_boundaries.py
atdd/planner/validators/: test_plan_cross_refs.py  test_plan_urn_resolution.py  test_train_validation.py  test_wagon_urn_chain.py  test_wmbt_consistency.py  test_wmbt_vocabulary.py
atdd/tester/validators/: cleanup_duplicate_headers.py  cleanup_duplicate_headers_v2.py  (+17 more)
plan/self-compliance-migration/: capability-inventory.yaml
sessions/: README.md  SESSION-TEMPLATE.md
src/atdd/: cli.py  conftest.py  version_check.py
src/atdd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+134 files in other folders)
